<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Error messages-->
    <string name="network_error_message">Network error. Please check your internet connection and try again. Only favorites movies are available offline.</string>
    <string name="http_api_unauthorized_error_message">The resource you requested could not be found. Please check API key: You must be granted a valid key.</string>
    <string name="detail_error_message">Movie data not available</string>

    <!-- Action Menu Items -->
    <string name="action_most_popular">Most Popular</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="action_favorites">My Favorites</string>
    <string name="action_settings">Settings</string>

    <!-- Detail Activity-->
    <!--<string name="detail_title_label">Title</string>-->
    <string name="detail_original_title_label">Original title</string>
    <string name="detail_release_date_label">Release date</string>
    <string name="detail_rating_label">Rating</string>
    <!--<string name="detail_plot_synopsis_label">Plot synopsis</string>-->
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>

    <!-- Content descriptions-->
    <string name="movie_poster_content_description">Movie poster picture</string>
    <string name="movie_backdrop_content_description">Movie backdrop picture</string>
    <string name="trailer_thumbnail_content_description">Trailer thumbnail picture</string>

    <!-- Button title -->
    <string name="retry_button_title">Retry</string>

    <!-- Movie details text -->
    <string name="activity_movie_title_text" translatable="false">Maze Runner: The Scorch Trials</string>
    <string name="activity_movie_release_date_text" translatable="false">2016–12–02</string>
    <string name="activity_movie_rating_text" translatable="false">6.1</string>
    <string name="activity_movie_plot_synopsis_text" translatable="false">"After the events of Captain America: Civil War, King T'Challa returns home to the reclusive, technologically advanced African nation of Wakanda to serve as his country's new leader. However, T'Challa soon finds that he is challenged for the throne from factions within his own country. When two foes conspire to destroy Wakanda, the hero known as Black Panther must team up with C.I.A. agent Everett K. Ross and members of the Dora Milaje, Wakandan special forces, to prevent Wakanda from being dragged into a world war."</string>
    <string name="activity_movie_trailer_text" translatable="false">Official Trailer</string>
    <string name="activity_movie_review_author_text" translatable="false">Author</string>
    <string name="activity_movie_review_url_text">Review Url</string>
    <string name="activity_movie_review_content_text" translatable="false">"**The earthlings are united to defend the home from another alien attack.**\r\n\r\nI have said it many times that when I love a film, I always pray for a sequel to come. But I won't do that for all the films like perhaps 'Taken' and this one. These are not designed for that kind of a stretch or to own a franchise. So anyway they have made it and I'd watched. Since I was not expecting it, I did not care about the how it ends. I mean critically failed and the box office was okay, but did not meet the expectations. I mean not found anywhere near to the original film's collection.\r\n\r\nFor me, minus half point for the Chinese flavour. I think the Hollywood must stop leaning towards Chinese contents. It is like they are ignoring the rest of the world. I want the old days American films, not this yuan targeted films. Sorry, that is one of the reasons why I disliked films like this, 'Now You See Me 2' and many other recent sino-Hollywood films.\r\n\r\nThis story takes place 20 years later to the original film. Only a handful of characters returned and many of them were new. So now the humans leaped forward after adapting the alien technology. But when they learn the distress call was sent to the base of the enemy from the 20 years ago event, they are underprepared for another alien attack that follows very soon. Without any option they push their full force to defend the earth and it would they succeed or not is what the remaining film to reveal.\r\n\r\nNowadays the graphics are not an issue. The filmmaking had touched down for a standard in the visual quality, especially a big production like this. So those parts even overplay the performances of the real actors. We have seen that from Gollum, King Kong and many other monster films. So if you are watching a today's high end film means, it is a pleasure from the blow ups we expect the most. Similar to killings from the horror thrillers. This film does that so well, that mean it is entertaining, but not the overall film very praisable.\r\n\r\nThis story can be easily connected to many classics such as 'Star Wars' and 'Avatar'. Because how it ends seems like a story about the origins of those films. So the third film is like definitely takes us deep into the space. Looks very interesting, but does it work is the real question. It is already in the work with the same director. So lets wait and see how it corrects its mistakes. Meantime, you can watch this if you haven't yet, but it is an average film.\r\n\r\n_5.5/10_"</string>
    <string name="review_author_label">Author:</string>
    <string name="play_video">Play Video</string>
    <string name="title_activity_settings">Settings</string>

    <string name="most_popular_activity_title">Most Popular Movies</string>
    <string name="highest_rated_activity_title">Highest Rated Movies</string>
    <string name="my_favorites_activity_title">My Favorites Movies</string>

    <string name="favorite_add_message">Movie added to favorites</string>
    <string name="favorite_delete_message">Movie removed from favorites</string>

    <string name="action_share">Share</string>

    <string name="share_no_trailer_message">No trailer to share</string>
    <string name="share_trailer_using_message">Share trailer using</string>


    <!-- Strings related to Settings -->

    <!-- Language Settings -->

    <string name="pref_title_language">Data Source Language</string>
    <string-array name="pref_language_list_labels">
        <item>@string/pref_language_english_label</item>
        <item>@string/pref_language_device_label</item>
    </string-array>
    <string-array name="pref_language_list_values">
        <item>@string/pref_language_english_key</item>
        <item>@string/pref_language_device_key</item>
    </string-array>

    <string name="pref_language_english_key" translatable="false">en-US</string>
    <string name="pref_language_device_key" translatable="false">default</string>
    <string name="pref_language_key" translatable="false">language</string>

    <!-- Video Type Settings -->

    <string name="pref_title_video_type">Video Type</string>
    <string-array name="pref_video_type_list_labels">
        <item>@string/pref_video_type_trailer_label</item>
        <item>@string/pref_video_type_all_label</item>
    </string-array>
    <string-array name="pref_video_type_list_values">
        <item>@string/pref_video_type_trailer_key</item>
        <item>@string/pref_video_type_all_key</item>
    </string-array>

    <string name="pref_video_type_trailer_key" translatable="false">trailer</string>
    <string name="pref_video_type_all_key" translatable="false">all</string>
    <string name="pref_video_type_key" translatable="false">video-type</string>
    <string name="pref_video_type_trailer_label">Trailer</string>
    <string name="pref_video_type_all_label">All</string>
    <string name="pref_language_english_label">English</string>
    <string name="pref_language_device_label">Current Device Language</string>
    <string name="open_favorite_button_title">Go to favorites</string>
    <string name="alert_dialog_title">Warning!</string>


</resources>
