<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/author_label"
                style="@style/DetailLabelStyle"
                android:layout_width="wrap_content"
                android:text="@string/review_author_label" />

            <TextView
                android:id="@+id/author_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_toRightOf="@+id/author_label"
                android:text="@string/activity_movie_review_author_text"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/author_tv"
                android:ellipsize="end"
                android:maxLines="3"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/activity_movie_review_content_text"
                android:textSize="@dimen/text_sz_medium" />

            <TextView
                android:id="@+id/url_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_tv"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/activity_movie_review_url_text"
                android:textAppearance="?attr/textAppearanceListItem" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>