<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal">

            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                android:id="@+id/video_iv"
                android:layout_width="@dimen/video_width"
                android:layout_height="@dimen/video_height"
                android:adjustViewBounds="true"
                android:contentDescription="@string/trailer_thumbnail_content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/movie_poster" />

            <ImageView
                android:id="@+id/play_button_iv"
                android:layout_width="@dimen/video_width"
                android:layout_height="@dimen/video_height"
                android:contentDescription="@string/play_video"
                android:scaleType="centerInside"
                android:src="@drawable/ic_play_circle_outline_white_48px" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="@dimen/poster_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/video_iv"
                android:text="@string/activity_movie_trailer_text"
                android:textAlignment="center" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>